--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://likhitavel23.github.io/cs378-p4",
   "scripts": {
     "test": "react-scripts test",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
